Updated meta info

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta
+      name="description"
+      content="A browser-based tool that converts JSON data into TypeScript interfaces with configurable options for enum detection, camelCase conversion, and more."
+    />
+    <meta
+      name="keywords"
+      content="JSON, TypeScript, interface generator, code generator, developer tool, Vue"
+    />
+    <meta name="author" content="TypeScript Tools" />
+    <meta name="robots" content="index, follow" />
+    <title>TypeScript Interface Generator</title>
   </head>
   <body>
     <div id="app"></div>
